--- a/content/partials/_footer.html
+++ b/content/partials/_footer.html
@@ -1,4 +1,4 @@
 <footer class="w-full p-5 bg-gray-200">
-  <div class="text-xs text-center markdown">{{ copyright }}</div>
-  <div class="text-xs text-center underline markdown"><a href="/cgv">{{ terms_title }}</a></div>
+  <div class="text-xs text-center markdown">{{ metadata.copyright }}</div>
+  <div class="text-xs text-center underline markdown"><a href="/cgv">Conditions Générales de Ventes</a></div>
 </footer>
