--- a/content/partials/_head.html
+++ b/content/partials/_head.html
@@ -7,10 +7,10 @@
   {% endif %}
 
   <!-- Primary Meta Tags -->
-  <title>{{ page_title }}</title>
-  <meta name="title" content="{{ page_title }}">
-  <meta name="description" content="{{ description }}">
-  <meta name="keywords" content="{{ keywords }}">
+  <title>{{ seo_metadata.page_title }}</title>
+  <meta name="title" content="{{ seo_metadata.page_title }}">
+  <meta name="description" content="{{ seo_metadata.description }}">
+  <meta name="keywords" content="{{ seo_metadata.keywords }}">
 
   <!-- Favicon -->
   <!-- https://favicon.io/favicon-generator/ -->
@@ -21,19 +21,19 @@
   <!-- Open Graph / Facebook -->
   {% set social_url = '{base_url}/img/{social_file}'.format(
     base_url=base_url,
-    social_file=social_file | default('social.png'),
+    social_file=seo_metadata.social_file | default('social.png'),
   ) %}
   <meta property="og:type" content="website">
-  <meta property="og:site_name" content="{{ page_title }}">
+  <meta property="og:site_name" content="{{ seo_metadata.page_title }}">
   <meta property="og:url" content="{{ base_url }}">
-  <meta property="og:title" content="{{ title }}">
+  <meta property="og:title" content="{{ metadata.title }}">
   <meta property="og:image" content="{{ social_url }}">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="{{ base_url }}">
-  <meta property="twitter:title" content="{{ title }}">
-  <meta property="twitter:description" content="{{ description }}">
+  <meta property="twitter:title" content="{{ metadata.title }}">
+  <meta property="twitter:description" content="{{ seo_metadata.description }}">
   <meta property="twitter:image" content="{{ social_url }}">
 
   <link href="/style.css" rel="stylesheet">
